--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
 
     <h2><b>Pantone de l'année</b></h2>
 
-    <div class="carre-bleue">2020</div>
-    <div class="carre-rose">2019</div>
-    <div class="carre-violet">2018</div>
-    <br></br>
-    <div class="carre-very">2022</div>
+    <div class="flex-container">
+        <div class="carre-bleue taille">2020</div>
+        <div class="carre-rose taille">2019</div>
+        <div class="carre-violet taille">2018</div>
+        <br></br>
+        <div class="carre-very taille">2022</div>
+        <div class="carre-bi taille">2021</div>
+    </div>
 </body>
 
 </html>
